<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">暴仓计算</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="total_money">投入金额</string>
    <string name="mutiple">扩大倍数</string>
    <string name="use_money">买入总金额</string>
    <string name="explosion_percent">爆仓比例(%)</string>
    <string name="current_win">当前赢利</string>
    <string name="current_lose">当前亏损</string>
    <string name="compute">计算</string>
    <string name="establish_cost">建仓手续费(‰)</string>

</resources>
