<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >
    
    <FrameLayout
        android:id="@+id/bannerContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" >
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/top_arc_drawable"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp" >

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:gravity="center"
            android:text="@string/total_money" />

        <EditText
            android:id="@+id/total_money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="#ffffff"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/body_bg_drawable"
        android:orientation="horizontal"
        android:padding="5dp" >

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:gravity="center"
            android:text="@string/mutiple" />

        <EditText
            android:id="@+id/mutiple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="#ffffff"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/body_bg_drawable"
        android:orientation="horizontal"
        android:padding="5dp" >

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:gravity="center"
            android:text="@string/use_money" />

        <EditText
            android:id="@+id/use_money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="#ffffff"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/body_bg_drawable"
        android:orientation="horizontal"
        android:padding="5dp" >

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:gravity="center"
            android:text="@string/explosion_percent" />

        <EditText
            android:id="@+id/explosion_percent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="#ffffff"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/body_bg_drawable"
        android:orientation="vertical"
        android:padding="5dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:gravity="center"
                android:text="@string/current_win" />

            <EditText
                android:id="@+id/current_win"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="#ffffff"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:gravity="center"
                android:text="@string/current_lose" />

            <EditText
                android:id="@+id/current_lose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="#ffffff"
                android:inputType="numberDecimal" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/bottom_arc_drawable"
        android:orientation="horizontal"
        android:padding="5dp" >

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/establish_cost" />

        <EditText
            android:id="@+id/establish_cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="#ffffff"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/compute_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_drawable"
        android:text="@string/compute"
        android:textColor="#ffffff" />

</LinearLayout>